[tool.poetry]
name = "notas-musicais"
version = "0.1.0"
description = ""
authors = ["dunossauro <mendesxeduardo@gmail.com>"]
readme = "README.md"
packages = [{include = "notas_musicais"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
isort = "^5.11.4"
taskipy = "^1.10.3"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.0.3"
mkdocstrings = "^0.19.1"
mkdocstrings-python = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.taskipy.tasks]
docs = "mkdocs serve"
lint = "blue --check --diff . && isort --check --diff ."
pytest = "pytest -x -vv --cov=notas_musicais ."
pre_test = "task lint"
test = "task pytest"
post_test = "task cov"
cov = "coverage html"
